{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 13,
  "lineage": "f5065c08-6a92-4902-a14a-87015ae59c22",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ejer_1_Carmen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:851725258399:instance/i-0c683dc20cf2f90a0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c683dc20cf2f90a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02b466577a73dc725"
              }
            ],
            "primary_network_interface_id": "eni-02b466577a73dc725",
            "private_dns": "ip-172-31-28-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.250",
            "public_dns": "ec2-23-22-11-11.compute-1.amazonaws.com",
            "public_ip": "23.22.11.11",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b33ab9f96436b297",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ejer_1_Carmen"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a071ef02ad004452",
            "tags": {
              "Name": "instancia_ejer1"
            },
            "tags_all": {
              "Name": "instancia_ejer1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c2a7fdfc8c3ee54e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "i-0c683dc20cf2f90a0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ejer_1_Carmen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ejer_1_Carmen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725258399:security-group/sg-0c2a7fdfc8c3ee54e",
            "description": "Permitir HTTP y SSH",
            "egress": [],
            "id": "sg-0c2a7fdfc8c3ee54e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ejer_1_Carmen",
            "name_prefix": "",
            "owner_id": "851725258399",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ejer_1_Carmen"
            },
            "tags_all": {
              "Name": "ejer_1_Carmen"
            },
            "timeouts": null,
            "vpc_id": "vpc-010d294594a20c7fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "sg-0c2a7fdfc8c3ee54e",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725258399:security-group-rule/sgr-0b60a89c645a69ed7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b60a89c645a69ed7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0c2a7fdfc8c3ee54e",
            "security_group_rule_id": "sgr-0b60a89c645a69ed7",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "sgr-0b60a89c645a69ed7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ejer_1_Carmen"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725258399:security-group-rule/sgr-04e53f00241de9943",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04e53f00241de9943",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0c2a7fdfc8c3ee54e",
            "security_group_rule_id": "sgr-04e53f00241de9943",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851725258399",
            "id": "sgr-04e53f00241de9943",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ejer_1_Carmen"
          ]
        }
      ]
    }
  ]
}